# brace

./: CMakeLists.txt  LICENSE  README.md
cmake/: get_cpm.cmake
docs/: .gitignore  Doxyfile  Makefile
docs/doxygen-awesome-css/: doxygen-awesome.css
include/brace/: brace.h  result.h
include/priv/brace/: tokenizer.h
src/: brace.cpp  tokenizer.cpp
test/: json_test.cpp
